--- a/src/recipes/card-grid/card-grid.docs.mdx
+++ b/src/recipes/card-grid/card-grid.docs.mdx
@@ -1,7 +1,63 @@
-<!-- ## Purpose
+## Drupal Views implementation
 
-## Usage
+There are multiple approaches to implementing a card grid. This recipe provides an example of a article teaser view.
 
-## Drupal Theme Implementation
+The article content type contains the following fields: image, category, and body text. We will also be using the title, and more link inherent in the content type.
 
-### Template Example -->
+### 1. Build your view as normal with the following settings:
+
+- Format: `Unformatted list`
+- Show: `Content | Teaser`
+
+### 2. Create a views unformatted custom template
+
+Create `views-view-unformatted--[view-machine-name].html.twig` with only the following code.
+
+```
+<div class="grid__container">
+{% for row in rows %}
+  {{- row.content -}}
+{% endfor %}
+</div>
+
+```
+
+**Note:** This template will strip out standard row attributes and any additional row settings you set within the Views UI.
+
+### 3. Create a node teaser template for any content types that will be included in the view
+
+Create `node--[content-type-machine-name]--teaser.html.twig` with only the following code.
+
+```
+{# Preprocess Image #}
+{% set image = {
+  src: file_url(content.field_article_image[0]['#media'].field_media_image.entity.uri.value),
+  alt: content.field_article_image[0]['#media'].field_media_image.alt
+}%}
+
+{# Preprocess Link #}
+{% set link_text_markup %}
+  Read more <span class="visually-hidden"> about {{ label.0 }} <span>
+{% endset %}
+{% set link = {
+  url: url,
+  text: link_text_markup
+} %}
+
+{% include "@pds/card/card.twig" with {
+  kicker_text: content.field_category,
+  heading_text: label,
+  heading_level: 'h3',
+  body_text: content.field_body.0,
+  extra_classes: 'grid__item grid__item--sm-4 grid__item--md-4'
+}%}
+
+
+```
+
+**Notes:**
+
+- We are manually setting `h2` as the `heading_level` in this example. However, if these cards will be nested within an h2 on the site, you should then designate the `heading_level` as `h3`.
+- The `extra_classes` added to this recipe are specific to a three-across grid. These can be adjusted if you'd like another grid configuration.
+- This template includes an accessible "Read More" link by providing additional context for screen reader users.
+- If you are using multiple content types to feed into this view, you can either create a teaser template for each, or instead create `node--teaser.html.twig` and implement this markup only for certain node types. The node type can be obtained in Twig via `node.getType()`.
