--- a/src/docs/introduction.stories.mdx
+++ b/src/docs/introduction.stories.mdx
@@ -1,16 +1,7 @@
-<Meta title='Documentation/Introduction' />
+<Meta title="Documentation/Introduction" />
 
 # SB Drupal
 
 This toolkit is a sample Storybook implementation for Drupal.
 
 Project repository: https://github.com/mel-miller/sb-drupal
-
-<br />
-
-## Getting Started
-
-- [Installation]
-- [Theme Setup]
-
-## Usage
