Add `sb` namespace to classes

--- a/src/docs/usage.stories.mdx
+++ b/src/docs/usage.stories.mdx
@@ -46,7 +46,7 @@ In some cases — usually with primitive components — it is not necessary to r
 For example, within a theme's submit button template — `/templates/input/input--submit.html.twig` — we can use the `addClass` function to add additional classes to the existing attributes.
 
 ```
-<input{{ attributes.addClass('sb-drupal-button') }} />{{ children }}
+<input{{ attributes.addClass('sb-button') }} />{{ children }}
 ```
 
 ## Component-specific instructions
