namespace main css and js

--- a/src/docs/setup.stories.mdx
+++ b/src/docs/setup.stories.mdx
@@ -20,7 +20,7 @@ Add compiled css from sb-drupal.
 sb-css:
   css:
     theme:
-      sb-drupal/dist/css/main.min.css: {}
+      sb-drupal/dist/css/sb-main.min.css: {}
 ```
 
 ### Define JS library
@@ -30,7 +30,7 @@ Add compiled js from sb-drupal. Because most js code will be wrapped within a Dr
 ```
 sb-js:
   js:
-    sb-drupal/dist/js/main.min.js: {}
+    sb-drupal/dist/js/sb-main.min.js: {}
   dependencies:
     - core/drupal
 ```
