--- a/src/docs/introduction.stories.mdx
+++ b/src/docs/introduction.stories.mdx
@@ -4,4 +4,28 @@
 
 This toolkit is a sample Storybook implementation for Drupal.
 
+At this point in time, it is not meant to be a complete example of a design system, but rather an organizational system and collection of example components.
+
 Project repository: https://github.com/mel-miller/sb-drupal
+
+<br />
+
+## Toolkit Organization
+
+This toolkit is divided into five main sections.
+
+### Documentation
+
+All documentation that is not for a specific component is included in this section. It includes setup instructions, usage instructions, and tips for building components.
+
+### Foundations
+
+This section includes components for displaying the styles for native HTML elements. Styles will be compiled into `sb-main.css`. Components in this section will not have shipped Twig files.
+
+### Utilities
+
+This section includes global utility components such as breakpoints, grid, and colors. Some will provide utility classes or mixins. Each will have a story with instructions and usage guidelines. Styles will be compiled into `sb-main.css`. Components in this section will not have shipped Twig files.
+
+### Components
+
+### Recipes
