--- a/src/docs/introduction.stories.mdx
+++ b/src/docs/introduction.stories.mdx
@@ -20,12 +20,18 @@ All documentation that is not for a specific component is included in this secti
 
 ### Foundations
 
-This section includes components for displaying the styles for native HTML elements. Styles will be compiled into `sb-main.css`. Components in this section will not have shipped Twig files.
+This section includes stories for displaying the styles for native HTML elements. Styles will be compiled into `sb-main.css`. Components in this section will not have shipped Twig files.
 
 ### Utilities
 
-This section includes global utility components such as breakpoints, grid, and colors. Some will provide utility classes or mixins. Each will have a story with instructions and usage guidelines. Styles will be compiled into `sb-main.css`. Components in this section will not have shipped Twig files.
+This section includes global utilities such as breakpoints, grid, and colors. Some will provide utility classes or mixins. Each will have a story with instructions and usage guidelines. Styles will be compiled into `sb-main.css`. Components in this section will not have shipped Twig files.
 
 ### Components
 
+This section contains the main UI components — the building blocks for the user interface. Components can be primitive such as buttons or icons, all the way though complex elements like cards or page templates.
+
+Styles will be compiled into `sb-main.css`, JS will be compiled into `sb-main.js`, and each component's Twig file will be shipped with this toolkit.
+
 ### Recipes
+
+Recipes are examples of how to create compositions using the utilities and components. Recipes will contain a story, sample data, and clear instructions about how to implement the compositions in your site. No assets will be shipped from recipes.
