Create custom storybook theme

--- a/src/docs/introduction.stories.mdx
+++ b/src/docs/introduction.stories.mdx
@@ -1,6 +1,6 @@
 <Meta title="Documentation/Introduction" />
 
-# SB Drupal
+# Storybook Drupal
 
 This toolkit is a sample Storybook implementation for Drupal.
 
