Add link and card

--- a/src/foundations/anchor/anchor.mdx
+++ b/src/foundations/anchor/anchor.mdx
@@ -1,10 +1,8 @@
-import { Canvas, Meta } from '@storybook/addon-docs/blocks';
-import * as AnchorStories from './anchor.stories';
+import { Canvas, Meta } from '@storybook/addon-docs/blocks'
+import * as AnchorStories from './anchor.stories'
 
-<Meta of={ AnchorStories } />
+<Meta of={AnchorStories} />
 
 # Anchor
 
-Custom documentation for the anchor component.
-
-<Canvas of={ AnchorStories.Default } />
+<Canvas of={AnchorStories.Default} />
