--- a/src/docs/integration.mdx
+++ b/src/docs/integration.mdx
@@ -4,7 +4,8 @@ import { Meta } from '@storybook/addon-docs/blocks'
 
 # Drupal Integration
 
-**NOTE: These instructions are still a work in progress and need to be fully tested.**
+**NOTE: These instructions are still a work in progress and need to be fully tested. A different approach may be needed in the future.**
+**NOTE 2: The NPM package is not yet published.**
 
 This toolkit is intended to be imported directly into a custom Drupal theme.
 
